--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,6 +2,6 @@
 
   <a href="https://www.instagram.com/playing.with.the.pantones/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
   <a href="https://www.pinterest.fr/Luciedehaut/" target="_blank"><i class="fa-brands fa-pinterest"></i></a>
-  <a href="https://www.pinterest.fr/Luciedehaut/" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+  <a href="mailto:lucie.dehauteclocque@gmail.com" target="_blank"><i class="fa-solid fa-envelope"></i></a>
 
 </div>
