--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,9 +1,9 @@
 .footer {
   z-index: 10;
   position: sticky;
-  margin-left: 80%;
-  bottom: 5%;
-  right: 5%;
+  margin-left: 80vw;
+  bottom: 5vh;
+  right: 5vw;
   display: flex;
   a {
     color: $sand;
