--- a/app/assets/stylesheets/components/_artwork_layout.scss
+++ b/app/assets/stylesheets/components/_artwork_layout.scss
@@ -4,18 +4,24 @@
   margin: 3%;
 }
 
+.artwork-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+@media only screen and (max-width: 550px) {
   .artwork-cards {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    img {
-      width: 90%;
-    }
+    grid-template-columns: 1fr;
   }
+}
 
 
 .artwork-card {
   padding: 8px;
   margin-bottom: 32px;
+  img {
+    width: 90%;
+  }
 }
 
 
