--- a/app/assets/stylesheets/components/_artwork_layout.scss
+++ b/app/assets/stylesheets/components/_artwork_layout.scss
@@ -20,8 +20,14 @@
   padding: 8px;
   margin-bottom: 32px;
   img {
-    width: 90%;
+    width: 100%;
+    transition: transform .1s;
   }
+  img:hover{
+    -ms-transform: scale(1.05); /* IE 9 */
+    -webkit-transform: scale(1.05); /* Safari 3-8 */
+    transform: scale(1.05);
+    }
 }
 
 
